// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should support maxLength 1`] = `
<Input
  disabled={false}
  maxLength="3"
  prefixCls="ant-input"
  type="text"
>
  <input
    className="ant-input"
    disabled={false}
    maxLength="3"
    onKeyDown={[Function]}
    type="text"
  />
</Input>
`;

exports[`Input.Search should support suffix 1`] = `
<Search
  enterButton={false}
  inputPrefixCls="ant-input"
  prefixCls="ant-input-search"
  suffix="suffix"
>
  <Input
    className="ant-input-search"
    disabled={false}
    onPressEnter={[Function]}
    prefixCls="ant-input"
    suffix={
      Array [
        "suffix",
        <Icon
          className="ant-input-search-icon"
          onClick={[Function]}
          type="search"
        />,
      ]
    }
    type="text"
  >
    <span
      className="ant-input-search ant-input-affix-wrapper"
    >
      <input
        className="ant-input"
        disabled={false}
        onKeyDown={[Function]}
        style={null}
        type="text"
      />
      <span
        className="ant-input-suffix"
      >
        suffix
        <Icon
          className="ant-input-search-icon"
          key="searchIcon"
          onClick={[Function]}
          type="search"
        >
          <i
            className="anticon anticon-search ant-input-search-icon"
            onClick={[Function]}
          >
            <IconReact
              className=""
              style={Object {}}
              type="search"
            >
              <svg
                aria-hidden="true"
                className=""
                data-icon="search"
                fill="currentColor"
                height="1em"
                style={Object {}}
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M949.5 898.5L743.8 692.9C798.9 626.4 832 541.1 832 448c0-212.1-171.9-384-384-384S64 235.9 64 448s171.9 384 384 384c93.1 0 178.4-33.1 244.9-88.2l205.7 205.7c7 7 16.2 10.5 25.5 10.5s18.4-3.5 25.5-10.5c13.9-14.1 13.9-36.9-.1-51zm-380.1-163C531 751.8 490.2 760 448 760s-83-8.2-121.4-24.5c-37.1-15.7-70.5-38.2-99.2-66.9-28.7-28.7-51.2-62.1-66.9-99.2C144.2 531 136 490.2 136 448s8.2-83 24.5-121.4c15.7-37.1 38.2-70.5 66.9-99.2 28.7-28.7 62.1-51.2 99.2-66.9C365 144.2 405.8 136 448 136s83 8.2 121.4 24.5c37.1 15.7 70.5 38.2 99.2 66.9 28.7 28.7 51.2 62.1 66.9 99.2C751.8 365 760 405.8 760 448s-8.2 83-24.5 121.4c-15.7 37.1-38.2 70.5-66.9 99.2-28.7 28.7-62 51.2-99.2 66.9z"
                  key="path-0"
                />
              </svg>
            </IconReact>
          </i>
        </Icon>
      </span>
    </span>
  </Input>
</Search>
`;

exports[`TextArea should support disabled 1`] = `
<TextArea
  disabled={true}
  prefixCls="ant-input"
>
  <textarea
    className="ant-input ant-input-disabled"
    disabled={true}
    onChange={[Function]}
    onKeyDown={[Function]}
    style={Object {}}
  />
</TextArea>
`;

exports[`TextArea should support maxLength 1`] = `
<TextArea
  maxLength="10"
  prefixCls="ant-input"
>
  <textarea
    className="ant-input"
    maxLength="10"
    onChange={[Function]}
    onKeyDown={[Function]}
    style={Object {}}
  />
</TextArea>
`;
